agregando cambios por consola

--- a/Inmobiliaria/Views/Contrato/Index.cshtml
+++ b/Inmobiliaria/Views/Contrato/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
 
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Contrato";
     List<Contrato> con = ViewData[nameof(Contrato)] as List<Contrato>;
    
 }
@@ -10,7 +10,7 @@
 <h1>Contratos</h1>
 
 <p>
-    <a asp-action="Create"><i class="bi bi-journal-plus"></i> Nuevo Contrato</a>
+    <a asp-action="Create"  style="text-decoration:none"><i class="bi bi-journal-plus"></i> Nuevo Contrato</a>
 </p>
 <table class="table">
     <thead>
@@ -63,7 +63,6 @@
                 <a asp-action="Details" asp-route-id="@item.Id" title="Detalles"><span> <i class="bi bi-card-list"></i></span></a> &nbsp &nbsp
                 <a asp-action="Edit" asp-route-id="@item.Id" title="Editar"><span> <i class="bi bi-pencil"></i></span></a> &nbsp &nbsp
                 <a asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"><span><i class="bi bi-trash"></i></span></a>&nbsp &nbsp
-                <a asp-action="Index" asp-controller="Pago" asp-route-id="@item.Id" title="Lista de Pagos"><span> <i class="bi bi-card-list"></i></span></a>&nbsp &nbsp
                 <a asp-action="Create" asp-controller="Pago" asp-route-id="@item.Id" title="Nuevo Pago"><span> <i class="bi bi-cash"></i></span></a>
 
             </td>
