--- a/Inmobiliaria/Views/Propietario/Index.cshtml
+++ b/Inmobiliaria/Views/Propietario/Index.cshtml
@@ -8,7 +8,7 @@
     <h1>Propietarios</h1>
 
     <p>
-        <a asp-action="Create">Agregar Un Nuevo Propietario</a>
+        <a asp-action="Create" style="text-decoration:none"><span><i class="bi bi-person-plus-fill"></i></span> Nuevo Propietario</a>
     </p>
     <table class="table">
         <thead>
