--- a/Inmobiliaria/Views/Shared/_Layout.cshtml
+++ b/Inmobiliaria/Views/Shared/_Layout.cshtml
@@ -3,59 +3,82 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Inmobiliaria</title>
+    <title>@ViewData["Title"]  Inmobiliaria</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/main.css" rel="stylesheet" />
-   
-    
+  
     <script src="https://unpkg.com/mustache@latest"></script>
 
 
 </head>
 
-<body  style="background-color:gainsboro;">
-
+<body onload="init()">
 
 
     <header>
-        <nav  class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-bottom box-shadow mb-3">
+
             <div class="container">
+
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><span><i class="bi bi-building"></i></span>Inmobiliaria</a>
+
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                       <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+
+                @if (!User.Identity.IsAuthenticated)
+                {
+
+            <a class="nav-link text-dark" asp-controller="Usuario" asp-action="Login"><span><i class="bi bi-box-arrow-in-right"></i></span>&nbsp Acceder</a>
+                }
+
+                @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador") || User.IsInRole("Empleado"))
+                {
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilino" asp-action="Index"><span><i class="bi bi-people-fill"></i></span>Inquilinos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inquilino" asp-action="Index" title="Ver Inquilinos"><span><i class="bi bi-people-fill"></i></span>Inquilinos</a>
                         </li>
 
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Propietario" asp-action="Index"><span><i class="bi bi-file-person-fill"></i></span>Propietarios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Propietario" asp-action="Index" title="Ver Propietarios"><span><i class="bi bi-file-person-fill"></i></span>Propietarios</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmueble" asp-action="Index"><span><i class="bi bi-house-fill"></i></span>Inmuebles</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Inmueble" asp-action="Index" title="Ver Inmuebles"><span><i class="bi bi-house-fill"></i></span>Inmuebles</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contrato" asp-action="Index"><span><i class="bi bi-file-text"></i></span>Contratos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contrato" asp-action="Index" title="Ver Contratos"><span><i class="bi bi-file-text"></i></span>Contratos</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Pago" asp-action="Index"><span><i class="bi bi-cash"></i></span>Pagos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pago" asp-action="Index" title="Ver Pagos"><span><i class="bi bi-cash"></i></span>Pagos</a>
                         </li>
+
+
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index"><span><i class="bi bi-cash"></i></span>Usuarios</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Usuario" asp-action="Index" title="Ver Usuarios"><span><i class="bi bi-person-circle"></i></span>Usuarios</a>
+
+                        </li>
+
+                    </ul>
+                    <ul class="nav  navbar-rigth ">
+                        <li class="nav-item">
+
+                            <a class="nav-link text-dark" asp-controller="Usuario" asp-action="Logout">Salir  &nbsp<span><i class="bi bi-box-arrow-right"></i></span> </a>
+
                         </li>
                     </ul>
-                </div>
+
+
+                }
             </div>
         </nav>
     </header>
