--- a/Inmobiliaria/Views/Shared/_Login.cshtml
+++ b/Inmobiliaria/Views/Shared/_Login.cshtml
@@ -1,25 +1,117 @@
 ﻿@model Inmobiliaria.Models.LoginView
+<!Doctype html>
+<html>
+<head>
+    <style type="text/css">
 
-<h4>Acceso</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Usuarios" asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Usuario" class="control-label"></label>
-                <input asp-for="Usuario" class="form-control" />
-                <span asp-validation-for="Usuario" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
-                <span asp-validation-for="Clave" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Entrar" class="btn btn-primary" />
-            </div>
+        body {
+            background: #DAEAE4;
+            font-family: 'Open Sans', sans-serif;
+        }
+
+.login {
+  width: 400px;
+  margin: 16px auto;
+  font-size: 16px;
+}
+
+/* Reset top and bottom margins from certain elements */
+.login-header,
+.login p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+/* The triangle form is achieved by a CSS hack */
+.login-triangle {
+  width: 0;
+  margin-right: auto;
+  margin-left: auto;
+  border: 12px solid transparent;
+  border-bottom-color: #28d;
+}
+
+.login-header {
+  background: #28d;
+  padding: 20px;
+  font-size: 1.4em;
+  font-weight: normal;
+  text-align: center;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+        .login-container {
+            background: #09C0D6;
+            padding: 12px;
+        }
+
+/* Every row inside .login-container is defined with p tags */
+.login p {
+  padding: 12px;
+}
+
+.login input {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  border-width: 1px;
+  border-style: solid;
+  padding: 16px;
+  outline: 0;
+  font-family: inherit;
+  font-size: 0.95em;
+}
+
+.login input[type="email"],
+.login input[type="password"] {
+  background: #fff;
+  border-color: #bbb;
+  color: #555;
+}
+
+/* Text fields' focus effect */
+.login input[type="email"]:focus,
+.login input[type="password"]:focus {
+  border-color: #888;
+}
+
+.login input[type="submit"] {
+  background: #28d;
+  border-color: transparent;
+  color: #fff;
+  cursor: pointer;
+}
+
+.login input[type="submit"]:hover {
+  background: #17c;
+}
+
+/* Buttons' focus effect */
+.login input[type="submit"]:focus {
+  border-color: #05a;
+}
+
+    </style>
+
+</head>
+<body>
+    <!--https://codepen.io/miroot/pen/qwIgC/-->
+    <div class="login">
+        <div class="login-triangle"></div>
+
+        <h2 class="login-header">Acceso a Inmobiliaria</h2>
+        <form asp-controller="Usuario" asp-action="Login" class="login-container">
+
+            <p><input asp-for="Usuario" type="email" placeholder="Email"></p>
+            <span asp-validation-for="Usuario" class="text-danger"></span>
+            <p><input asp-for="Clave" type="password" placeholder="Contraseña"></p>
+            <span asp-validation-for="Clave" class="text-danger"></span>
+            <p><input type="submit" value="Entrar"></p>
         </form>
     </div>
-</div>
+
+</body>
+</html>
+
 
