--- a/Inmobiliaria/Views/Usuario/Create.cshtml
+++ b/Inmobiliaria/Views/Usuario/Create.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Inmobiliaria.Models.Usuario
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear Usuario";
+    @ViewBag.Error;
 }
 
 <h1>Crear</h1>
@@ -47,7 +48,7 @@
                 <span asp-validation-for="Rol" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-primary" />
                 <input type="button" value="Volver" class="btn btn-primary" asp-action="Index" />
             </div>
         </form>
