--- a/Inmobiliaria/Views/Usuario/Edit.cshtml
+++ b/Inmobiliaria/Views/Usuario/Edit.cshtml
@@ -1,18 +1,17 @@
 ﻿@model Inmobiliaria.Models.Usuario
 
-<h1>@ViewBag.Title</h1>
 
 <h4>Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
+                <input asp-for="Id" type="hidden" class="form-control" />
                 <span asp-validation-for="Id" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="Nombre" class="control-label"></label>
                 <input asp-for="Nombre" class="form-control" />
@@ -29,10 +28,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Clave" class="control-label"></label>
-                <input asp-for="Clave" class="form-control" />
+                <label asp-for="Clave" class="control-label" hidden></label>
+                <input asp-for="Clave" class="form-control" hidden />
                 <span asp-validation-for="Clave" class="text-danger"></span>
             </div>
+
             @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador"))
             {
                 <div class="form-group">
@@ -43,38 +43,39 @@
                             @:<option @(kvp.Key == Model.Rol ? "selected" : "") value="@kvp.Key">@kvp.Value</option>
                         }
                     </select>
+
                     <span asp-validation-for="Rol" class="text-danger"></span>
                 </div>
             }
+
+
+        <div class="form-group">
+            <label asp-for="Avatar" class="control-label"></label><br />
+            @if (Model.Avatar != "")
+            {
+                <img src="@Model.Avatar" />
+            }
+            else
+            {
+                <p>Sin avatar</p>
+            }
+            <input asp-for="Avatar" value="@Model.Avatar" class="form-control" hidden />
+            <!-- <div class="form-group">
+         <label asp-for="AvatarFile" class="control-label">Subir Nueva Imagen</label>
+         <input type="file" name="AvatarFile" />
+         <span asp-validation-for="AvatarFile" class="text-danger"></span>
+     </div>-->
+        </div>
             <div class="form-group">
-                <label asp-for="Avatar" class="control-label"></label><br />
-                @if (Model.Avatar != "")
-                {
-                    <img src="@Model.Avatar" />
-                }
-                else
-                {
-                    <p>Sin avatar</p>
-                }
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Actualizar" class="btn btn-primary" />
+                <a asp-action="Index" class="btn btn-primary">Volver</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
-@section Styles {
-    <!--Posible estilo aplicable solo a esta página-->
-    <!--esta sección se renderiza en el layout donde dice RenderSection("Styles", false)-->
-    <!--<link href="~/css/forms.css" rel="stylesheet" />-->
-}
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial"); }
 
-
+}
