--- a/Inmobiliaria/Views/Inmueble/Create.cshtml
+++ b/Inmobiliaria/Views/Inmueble/Create.cshtml
@@ -30,7 +30,7 @@
                 <span asp-validation-for="Direccion" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CantAmbientes" class="control-label"></label>
+                <label asp-for="CantAmbientes" class="control-label"> Ambientes</label>
                 <input asp-for="CantAmbientes" class="form-control" />
                 <span asp-validation-for="CantAmbientes" class="text-danger"></span>
             </div>
