--- a/Inmobiliaria/Views/Inmueble/Index.cshtml
+++ b/Inmobiliaria/Views/Inmueble/Index.cshtml
@@ -10,7 +10,10 @@
 <h1>Lista de Inmuebles</h1>
 
 <p>
-    <a asp-action="Create"  style="text-decoration:none"><span><i class="bi bi-house-fill"></i></span>Nuevo Inmueble</a>
+    <a asp-action="Create" style="text-decoration:none">Nuevo<span><i class="bi bi-house-fill"></i></span></a>
+</p>
+<p>
+    <a asp-action="Disponibles" title="Disponibles" style="text-decoration:none">Disponibles<span><i class="bi bi-house-fill"></i> </span></a> &nbsp &nbsp
 </p>
 <table class="table">
     <thead>
@@ -86,6 +89,7 @@
                     <a asp-action="Details" asp-route-id="@item.Id" title="Detalles"><span> <i class="bi bi-card-list"></i></span></a> &nbsp &nbsp
                     <a asp-action="Edit" asp-route-id="@item.Id" title="Editar"><span> <i class="bi bi-pencil"></i></span></a> &nbsp &nbsp
                     <a asp-action="InmueblesPorPropietario" asp-route-id="@item.IdPropietario" title="Inmuebles del Propietario"><span><i class="bi bi-house-fill"></i> </span></a> &nbsp &nbsp
+                   
                     <a asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"><span><i class="bi bi-trash"></i></span></a>
 
                 </td>
