--- a/Inmobiliaria/Views/Pago/Create.cshtml
+++ b/Inmobiliaria/Views/Pago/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Ingresar un Nuevo Pago</h1>
 
-<h4>Pago</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -15,17 +15,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="NroPago" class="control-label"></label>
+                <label asp-for="NroPago" class="control-label">Nro Pago</label>
                 <input asp-for="NroPago" class="form-control" />
                 <span asp-validation-for="NroPago" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaP" class="control-label"></label>
+                <label asp-for="FechaP" class="control-label">Fecha Pago</label>
                 <input asp-for="FechaP" class="form-control" />
                 <span asp-validation-for="FechaP" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Importe" class="control-label"></label>
+                <label asp-for="Importe" class="control-label">Importe</label>
                 <input asp-for="Importe"  class="form-control " />
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
@@ -38,9 +38,10 @@
 
             <div class="form-group">
 
-                <input type="submit" value="Guardar" class="btn btn-primary" />
 
                 <a asp-action="Index"><input type="button" value="Volver" class="btn btn-primary" /></a>
+                <input type="submit" value="Guardar" class="btn btn-primary" />
+
             </div>
         </form>
     </div>
