--- a/Inmobiliaria/Views/Pago/Details.cshtml
+++ b/Inmobiliaria/Views/Pago/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+
 
 <div>
-    <h4>Pago</h4>
+    <h1>Detalles de Pago</h1>
     <hr />
     <dl class="row">
 
@@ -66,5 +66,5 @@
 </div>
 <div>
   
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Volver</a>
 </div>
