--- a/Inmobiliaria/Views/Inmueble/Create.cshtml
+++ b/Inmobiliaria/Views/Inmueble/Create.cshtml
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="col-md-6">
 
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -41,31 +41,36 @@
             </div>
 
             <div class="form-group">
-                <label asp-for="IdPropietario" class="control-label">Propietario</label>
-                <select class="form-control" name="IdPropietario">
+                <label asp-for="PropietarioId" class="control-label">Propietario</label>
+                <select class="form-control" name="PropietarioId">
                     <!--<option value="vacio">  </option>-->
                     @foreach (var item in (IList<Propietario>)ViewBag.Propietarios)
                     {
                         <option value="@item.Id">@(item.Nombre + " "+ item.Apellido)</option>
                     }
                 </select>
-                <span asp-validation-for="IdPropietario" class="text-danger"></span>
-             </div>
-                <div class="form-group">
-                    <label  asp-for="Disponible" class="control-label"> Estado del inmueble:  </label>
-                    <select class="form-control" id="estadoInmueble" name="Disponible">
-                        
-                        <option value=1>Disponible</option>
-                        <option value=2>No disponible</option>
-                    </select>
+                <span asp-validation-for="PropietarioId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Disponible" class="control-label"> Estado del inmueble:  </label>
+                <select class="form-control" id="estadoInmueble" name="Disponible">
 
-                    <span asp-validation-for="Disponible" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <input type="submit" value="Agregar" class="btn btn-primary" />
+                    <option value=1>Disponible</option>
+                    <option value=2>No disponible</option>
+                </select>
 
-                    <a asp-action="Index"><input type="button" value="Volver" class="btn btn-primary" /></a>
-                </div>
+                <span asp-validation-for="Disponible" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ImageFile" class="control-label"></label>
+                <input type="file" name="ImageFile" />
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Agregar" class="btn btn-primary" />
+
+                <a asp-action="Index"><input type="button" value="Volver" class="btn btn-primary" /></a>
+            </div>
         </form>
     </div>
 
