--- a/Inmobiliaria/Views/Inmueble/Edit.cshtml
+++ b/Inmobiliaria/Views/Inmueble/Edit.cshtml
@@ -40,15 +40,15 @@
 
             <div class="form-group">
 
-                <label asp-for="IdPropietario" class="control-label">Propietario</label>
+                <label asp-for="PropietarioId" class="control-label">Propietario</label>
 
-                <select class="form-control" name="IdPropietario">
+                <select class="form-control" name="PropietarioId">
                     @foreach (var item in (IList<Propietario>)ViewBag.Propietarios)
                     {
-                        @:<option @(item.Id == Model.IdPropietario ? "selected" : "") value="@item.Id">@(item.Nombre + " " + item.Apellido)</option>
+                        @:<option @(item.Id == Model.PropietarioId ? "selected" : "") value="@item.Id">@(item.Nombre + " " + item.Apellido)</option>
                     }
                 </select>
-                <span asp-validation-for="IdPropietario" class="text-danger"></span>
+                <span asp-validation-for="PropietarioId" class="text-danger"></span>
 
             </div>
             <div class="form-group">
