--- a/Inmobiliaria/Views/Inmueble/Index.cshtml
+++ b/Inmobiliaria/Views/Inmueble/Index.cshtml
@@ -88,7 +88,7 @@
                 <td>
                     <a asp-action="Details" asp-route-id="@item.Id" title="Detalles"><span> <i class="bi bi-card-list"></i></span></a> &nbsp &nbsp
                     <a asp-action="Edit" asp-route-id="@item.Id" title="Editar"><span> <i class="bi bi-pencil"></i></span></a> &nbsp &nbsp
-                    <a asp-action="InmueblesPorPropietario" asp-route-id="@item.IdPropietario" title="Inmuebles del Propietario"><span><i class="bi bi-house-fill"></i> </span></a> &nbsp &nbsp
+                    <a asp-action="InmueblesPorPropietario" asp-route-id="@item.PropietarioId" title="Inmuebles del Propietario"><span><i class="bi bi-house-fill"></i> </span></a> &nbsp &nbsp
                    
                     <a asp-action="Delete" asp-route-id="@item.Id" title="Eliminar"><span><i class="bi bi-trash"></i></span></a>
 
