--- a/Inmobiliaria/Views/Propietario/Create.cshtml
+++ b/Inmobiliaria/Views/Propietario/Create.cshtml
@@ -40,6 +40,12 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Clave" class="control-label"></label>
+                <input asp-for="Clave" class="form-control" />
+                <span asp-validation-for="Clave" class="text-danger"></span>
+            </div>
+           
+            <div class="form-group">
                 <input type="submit" value="Agregar" class="btn btn-primary" />
 
                 <a asp-action="Index"><input type="button" value="Volver" class="btn btn-primary" /></a>
