--- a/Inmobiliaria/Views/Contrato/Edit.cshtml
+++ b/Inmobiliaria/Views/Contrato/Edit.cshtml
@@ -29,23 +29,23 @@
                 <span asp-validation-for="Importe" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="IdInmueble" class="control-label">Datos del Inmueble</label>
-                <select class="form-control" name="IdInmueble">
+                <label asp-for="InmuebleId" class="control-label">Datos del Inmueble</label>
+                <select class="form-control" name="InmuebleId">
 
                     @foreach (var item in (List<Inmueble>)ViewBag.Inmuebles)
                     {
-                        @:<option @(item.Id == Model.IdInmueble ? "selected" : "") value="@item.Id">@(item.Tipo + " "+ item.Direccion)</option>
+                        @:<option @(item.Id == Model.InmuebleId ? "selected" : "") value="@item.Id">@(item.Tipo + " "+ item.Direccion)</option>
                     }
                 </select>
 
             </div>
             <div class="form-group">
-                <label asp-for="IdInquilino" class="control-label">Datos Inquilino </label>
-                <select class="form-control" name="IdInquilino">
+                <label asp-for="InquilinoId" class="control-label">Datos Inquilino </label>
+                <select class="form-control" name="InquilinoId">
 
                     @foreach (var item in (List<Inquilino>)ViewBag.Inquilinos)
                     {
-                        @:<option @(item.Id == Model.IdInquilino ? "selected" : "") value="@item.Id">@(item.Apellido + " "+ item.Nombre)</option>
+                        @:<option @(item.Id == Model.InquilinoId ? "selected" : "") value="@item.Id">@(item.Apellido + " "+ item.Nombre)</option>
                     }
                 </select>
             </div>
